# crd2md

./: Cargo.toml  LICENSE  README.md
crd2md/: Cargo.toml
crd2md/src/: lib.rs  util.rs
kube_crd_iter/: Cargo.toml
kube_crd_iter/src/: k8s_ext.rs  lib.rs  property_info.rs  traits.rs
