[package]
name = "crd2md"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
markdown-ast = "0.1.1"
serde_yaml = "0.9.34"
pulldown-cmark = "0.11.0"
kube_crd_iter = { path = "../kube_crd_iter" }
serde = "1.0.214"
