[package]
name = "crd2md"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
markdown-ast = "0.1.1"
serde_yaml = "0.9.34"
pulldown-cmark = "0.11.3"
kube_crd_iter = { path = "../kube_crd_iter" }
serde = "1.0.217"
