[package]
name = "crd2md"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
markdown-ast = "0.1.1"
#markdown-ast = { git = "https://github.com/Gottox/Markdown.git" }
#markdown-ast = { path = "../../Markdown/crates/markdown-ast" }
serde_yaml = "0.9.34"
pulldown-cmark = "0.11.3"
kube_crd_iter = { path = "../kube_crd_iter" }
serde = "1.0.218"
